attached_assets/Pasted--src-capture-promise-cc-701-17-error-no--1772783863724_1772783863725.txt
                                                      ^
../src/capture_promise.cc:701:17: error: no matching function for call to 'napi_create_external_buffer'
    c->status = napi_create_external_buffer(env, rowBytes*height, bytes,
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/debo/Library/Caches/node-gyp/20.20.0/include/node/node_api.h:128:1: note: candidate function not viable: no known conversion from 'void (napi_env, void *, void *)' (aka 'void (napi_env__ *, void *, void *)') to 'node_api_basic_finalize' (aka 'void (*)(const napi_env__ *, void *, void *)') for 4th argument
napi_create_external_buffer(napi_env env,
^
../src/capture_promise.cc:857:19: error: no matching function for call to 'napi_create_external_buffer'
      c->status = napi_create_external_buffer(env,
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/debo/Library/Caches/node-gyp/20.20.0/include/node/node_api.h:128:1: note: candidate function not viable: no known conversion from 'void (napi_env, void *, void *)' (aka 'void (napi_env__ *, void *, void *)') to 'node_api_basic_finalize' (aka 'void (*)(const napi_env__ *, void *, void *)') for 4th argument
napi_create_external_buffer(napi_env env,
^
6 warnings and 2 errors generated.
make: *** [Release/obj.target/macadam/src/capture_promise.o] Error 1
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack at ChildProcess.<anonymous> (/Users/debo/.npm/_npx/c463d28440264a05/node_modules/node-gyp/lib/build.js:219:23)
gyp ERR! System Darwin 22.6.0
gyp ERR! command "/opt/homebrew/Cellar/node@20/20.20.0/bin/node" "/Users/debo/.npm/_npx/c463d28440264a05/node_modules/.bin/node-gyp" "rebuild"
gyp ERR! cwd /Users/debo/Documents/Attached-Assets/node_modules/macadam
gyp ERR! node -v v20.20.0
gyp ERR! node-gyp -v v12.2.0
gyp ERR! $npm_package_name macadam
gyp ERR! $npm_package_version 2.0.18
gyp ERR! not ok 
  macadam build failed — DeckLink output will be unavailable
  This is OK if you don't have Blackmagic Desktop Video installed
  macadam.node not produced — DeckLink features disabled